src/objects/COVA_AccountTask__c.object
<CustomObject>
    <fields>
        <fullName>COVA_Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>COVA_AccountTasks</relationshipLabel>
        <relationshipName>COVA_AccountTasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>COVA_IsNotToShow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COVA_IsNotToShow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COVA_TaskDescription__c</fullName>
        <label>COVA_TaskDescription</label>
        <type>TextArea</type>
    </fields>
    <label>COVA_AccountTask</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>COVA_AccountTask Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>COVA_AccountTasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>